fea-rs/test-data/parse-tests/bad/contextual_from.fea
feature nono {
    # 'from' is not supported in contextual rules
    sub a b' c from [d e];
} nono;
